--- a/SCME.UI/PagesTech/SLPage.xaml
+++ b/SCME.UI/PagesTech/SLPage.xaml
@@ -266,7 +266,7 @@
 
                         <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
                         <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" Margin="10"
-                                            TextBlock.TextAlignment="Right" Maximum="10000" Minimum="200"
+                                            TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxRampTime}" Minimum="{StaticResource MinRampTime}"
                                             IsNumeric="True"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
                                             Text="{Binding ElementName=stlsPage, Path=Parameters.RampTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -279,7 +279,7 @@
                            IsEnabled="{Binding ElementName=cbIsHeatEnabled, Path=IsChecked}"
                            Visibility="{Binding ElementName=stlsPage, Path=Parameters.IsRampOpeningEnabled, Converter={StaticResource B2V}}" />
                         <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="3" Margin="10"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
-                                            TextBlock.TextAlignment="Right" Maximum="1000" Minimum="100"
+                                            TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxRampOpeningCurrent}" Minimum="{StaticResource MinRampOpeningCurrent}"
                                             IsNumeric="True"
                                             Text="{Binding ElementName=stlsPage, Path=Parameters.RampOpeningCurrent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                             Visibility="{Binding ElementName=stlsPage, Path=Parameters.IsRampOpeningEnabled, Converter={StaticResource B2V}}" />
@@ -288,7 +288,7 @@
                            IsEnabled="{Binding ElementName=cbIsHeatEnabled, Path=IsChecked}"
                            Visibility="{Binding ElementName=stlsPage, Path=Parameters.IsRampOpeningEnabled, Converter={StaticResource B2V}}" />
                         <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="4" Margin="10"
-                                            TextBlock.TextAlignment="Right" Maximum="5000" Minimum="50"
+                                            TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxRampOpeningTime}" Minimum="{StaticResource MinRampOpeningTime}"
                                             IsNumeric="True"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
                                             Visibility="{Binding ElementName=stlsPage, Path=Parameters.IsRampOpeningEnabled, Converter={StaticResource B2V}}"
                                             Text="{Binding ElementName=stlsPage, Path=Parameters.RampOpeningTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -316,7 +316,7 @@
 
                             <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
                             <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" Margin="10"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
-                                                TextBlock.TextAlignment="Right" Maximum="15000" Minimum="4000"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxSinusTime}" Minimum="{StaticResource MinSinusTime}"
                                                 IsNumeric="True"
                                                 Text="{Binding ElementName=stlsPage, Path=Parameters.SinusTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </Grid>
@@ -351,13 +351,13 @@
 
                             <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.CurveFactor}" />
                             <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="2" Margin="10"
-                                                TextBlock.TextAlignment="Right" Maximum="100" Minimum="1"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxCurveFactor}" Minimum="{StaticResource MinCurveFactor}"
                                                 IsNumeric="True"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
                                                 Text="{Binding ElementName=stlsPage, Path=Parameters.CurveFactor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                             <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.AdditionalTime_us}" />
                             <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="3" Margin="10"
-                                                TextBlock.TextAlignment="Right" Maximum="5000" Minimum="0"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxCurveAddTime}" Minimum="{StaticResource MinCurveAddTime}"
                                                 IsNumeric="True"  Width="{Binding ElementName=comboBoxTestType, Path=ActualWidth}" HorizontalAlignment="Right"
                                                 Text="{Binding ElementName=stlsPage, Path=Parameters.CurveAddTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </Grid>
@@ -374,8 +374,8 @@
                     <Label Grid.Column="1" Grid.Row="8" Content="{x:Static res:Resources.CommutationType}" />
 
                     <ComboBox Grid.Column="2" Grid.Row="8" Margin="10" Padding="5" MaxDropDownHeight="1500"
-                          ItemsSource="{Binding Source={StaticResource DataFromCommutationModeEnum}}" SelectedValuePath="Value" DisplayMemberPath="Key"
-                          SelectedValue="{Binding ElementName=stlsPage, Path=CommType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                          ItemsSource="{Binding Source={StaticResource DataFromCommutationModeEnum}}"
+                          SelectedItem="{Binding ElementName=stlsPage, Path=CommType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource E2S}}"
                           Style="{StaticResource CComboboxStyle}" />
 
                     <Label Grid.Column="1" Grid.Row="9" Content="{x:Static res:Resources.Position}" />
@@ -385,13 +385,13 @@
                           SelectedItem="{Binding ElementName=stlsPage, Path=ModPosition, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource E2S}}"
                           Style="{StaticResource CComboboxStyle}" />
 
-                    <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="1" Grid.Row="10" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
-                    <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="10" Padding="5" Margin="10" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
+                    <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="1" Grid.Row="10" />
+                    <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="10" Padding="5" Margin="10"
                           TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="{StaticResource MaxHeightCS}" Minimum="{StaticResource MinHeightCS}"
                           Text="{Binding ClampParameters.Height, ElementName=stlsPage}" />
 
-                    <Label Grid.Column="1" Grid.Row="11" Content="{x:Static res:Resources.Force}" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
-                    <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="11" Margin="10" Padding="5" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
+                    <Label Grid.Column="1" Grid.Row="11" Content="{x:Static res:Resources.Force}" />
+                    <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="11" Margin="10" Padding="5"
                           TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxForceCS}" Minimum="{StaticResource MinForceCS}"
                           IsNumeric="True" IsFloat="True"
                           Text="{Binding ElementName=stlsPage, Path=ClampParameters.CustomForce}" />
@@ -401,10 +401,10 @@
                           TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="{StaticResource MaxTempCS}" Minimum="{StaticResource MinTempCS}"
                           Text="{Binding Temperature, ElementName=stlsPage}" />
 
-                    <Label Grid.Column="1" Grid.Row="13" x:Name="lblTitleTop"  Content="{Binding Source={StaticResource TopTempName}}" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
-                    <Label Grid.Column="2" Grid.Row="13" x:Name="TopTempLabel" Content="0" Background="LightGreen" HorizontalContentAlignment="Right" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"  />
+                    <Label Grid.Column="1" Grid.Row="13" x:Name="lblTitleTop"  Content="{x:Static res:Resources.TopTempName}" HorizontalAlignment="Left"/>
+                    <Label Grid.Column="2" Grid.Row="13" x:Name="TopTempLabel" Content="0" Background="LightGreen" HorizontalContentAlignment="Right"   />
 
-                    <Label Grid.Column="1" Grid.Row="14" x:Name="lblTitleBot"  Content="{Binding Source={StaticResource BottomTempName}}" HorizontalAlignment="Left"/>
+                    <Label Grid.Column="1" Grid.Row="14" x:Name="lblTitleBot"  Content="{x:Static res:Resources.BotTempName}" HorizontalAlignment="Left"/>
                     <Label Grid.Column="2" Grid.Row="14" x:Name="BotTempLabel" Content="0" Background="LightGreen" HorizontalContentAlignment="Right"  />
 
                     <Label Style="{StaticResource StLblStyle}" Content="Vtm, mV" Grid.Column="1" Grid.Row="15" />
