--- a/SCME.UI/PagesTech/DVdtPage.xaml
+++ b/SCME.UI/PagesTech/DVdtPage.xaml
@@ -98,7 +98,7 @@
 
                 <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.DvDtVoltage}" HorizontalAlignment="Left" />
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" 
-                                                TextBlock.TextAlignment="Right" Maximum="10000" Minimum="0"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxVoltage}" Minimum="{StaticResource MinVoltage}"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.Voltage, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
                
@@ -117,7 +117,7 @@
 
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="3" 
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                TextBlock.TextAlignment="Right" Maximum="2000" Minimum="50"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxVoltageRateOffSet}" Minimum="{StaticResource MinVoltageRateOffSet}"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.VoltageRateOffSet, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -125,7 +125,7 @@
                         Visibility="{Binding ElementName=dVdtPage,Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="4"
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                TextBlock.TextAlignment="Right" Maximum="100" Minimum="1"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxConfirmationCount}" Minimum="{StaticResource MinConfirmationCount}"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.ConfirmationCount, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -133,7 +133,7 @@
                         Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="5" 
                                                 Visibility="{Binding ElementName=dVdtPage, Path=Parameters.Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                TextBlock.TextAlignment="Right" Maximum="2500" Minimum="500"
+                                                TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxVoltageRateLimit}" Minimum="{StaticResource MinVoltageRateLimit}"
                                                 IsNumeric="True"
                                                 Text="{Binding Parameters.VoltageRateLimit, ElementName=dVdtPage, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -142,18 +142,18 @@
 
 
                 <Label Content="{x:Static res:Resources.Height_Prof}"   Grid.Column="0"  Grid.Row="6" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
-                <customControls:ValidatingTextBox Grid.Column="1"  Grid.Row="6" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
-                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="100000" Minimum="0"
+                <customControls:ValidatingTextBox Grid.Column="1"  Grid.Row="6" 
+                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="{StaticResource MaxHeightCS}" Minimum="{StaticResource MinHeightCS}" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
                           Text="{Binding ClampParameters.Height, ElementName=dVdtPage}" />
 
                 <Label Content="{x:Static res:Resources.Temp}"  Grid.Column="0"  Grid.Row="7" HorizontalAlignment="Left" />
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="7" 
-                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="5"
+                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="{StaticResource MaxTempCS}" Minimum="{StaticResource MinTempCS}"
                           Text="{Binding Temperature, ElementName=dVdtPage}" />
 
                 <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
-                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="0"
+                          TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="{StaticResource MaxForceCS}" Minimum="{StaticResource MinForceCS}"
                           Text="{Binding ClampParameters.CustomForce, ElementName=dVdtPage}" />
 
                 <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{Binding Source={StaticResource TopTempName}}" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
