--- a/SCME.UI/PagesTech/GatePage.xaml
+++ b/SCME.UI/PagesTech/GatePage.xaml
@@ -114,7 +114,7 @@
 
                     <Label Grid.Column="1" Grid.Row="3" Content="{x:Static res:Resources.IHItm}" Visibility="{Binding ElementName=gatePage, Path=Parameters.IsIhEnabled, Converter={StaticResource B2V} }"/>
                     <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="3" Margin="10" Padding="5" Visibility="{Binding ElementName=gatePage, Path=Parameters.IsIhEnabled, Converter={StaticResource B2V} }"
-                          TextBlock.TextAlignment="Right" Minimum="500" Maximum="2000"
+                          TextBlock.TextAlignment="Right" Minimum="{StaticResource MinItmIH}" Maximum="{StaticResource MaxItmIH}"
                           IsNumeric="True" IsFloat="True" 
                           Text="{Binding ElementName=gatePage, Path=Parameters.Itm}" />
                     
@@ -201,7 +201,7 @@
                     
                     <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="19" Margin="10,5"
                                                       x:Name="calibrationCurrent" x:FieldModifier="private"
-                                                      TextBlock.TextAlignment="Right" Maximum="65535" Minimum="0"
+                                                      TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxCalibrationCurrent}" Minimum="{StaticResource MinCalibrationCurrent}"
                                                       IsNumeric="True" />
                     <Label Grid.Column="2" Grid.Row="20" Margin="10" Content="0" x:Name="actualCurrent"
                            x:FieldModifier="private" />
