--- a/SCME.UI/PagesTech/IHPage.xaml
+++ b/SCME.UI/PagesTech/IHPage.xaml
@@ -60,7 +60,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.IHItm}" HorizontalAlignment="Left"/>
-                <customControls:ValidatingTextBox x:Name="vtbItm" Grid.Column="2" Grid.Row="0" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="500" Maximum="2000" Text="{Binding Parameters.Itm, ElementName=ihPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <customControls:ValidatingTextBox x:Name="vtbItm" Grid.Column="2" Grid.Row="0" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="{StaticResource MinItmIH}" Maximum="{StaticResource MaxItmIH}" Text="{Binding Parameters.Itm, ElementName=ihPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
                 <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1"  Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"
